--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <div class="wrapper">
         <audio
           autoplay
+          preload
           loop
           class="audio"
           src="./audio/Педро педро педро пе - Рингтон на звонок телефон.mp3"
