--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
     <title>Pedro</title>
   </head>
   <body>
+    <figure>
+      <audio
+        autoplay
+        loop
+        class="audio"
+        src="./audio/Педро педро педро пе - Рингтон на звонок телефон.mp3"
+      ></audio>
+    </figure>
     <section class="section">
       <div class="wrapper">
-        <audio
-          autoplay
-          preload
-          loop
-          class="audio"
-          src="./audio/Педро педро педро пе - Рингтон на звонок телефон.mp3"
-        ></audio>
         <img
           class="pedro"
           src="./img/Pedro raccoon funny viral video Meme  by….jpg"
