--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
         src="./audio/Педро педро педро пе - Рингтон на звонок телефон.mp3"
       ></audio>
     </figure>
+    <audio controls>
+      <source
+        src="./audio/Педро педро педро пе - Рингтон на звонок телефон.mp3"
+        type="audio/mpeg"
+      />
+      <source src="./audio/" type="audio/ogg" />
+      <p>
+        Ваш браузер не поддерживает HTML5 аудио. Вот взамен
+        <a href="myAudio.mp4">ссылка на аудио</a>
+      </p>
+    </audio>
     <section class="section">
       <div class="wrapper">
         <img
