--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
         src="./audio/Педро педро педро пе - Рингтон на звонок телефон.mp3"
         type="audio/mpeg"
       />
-      <source src="./audio/" type="audio/ogg" />
+      <source
+        src="./audio/Педро педро педро пе - Рингтон на звонок телефон.mp3"
+        type="audio/ogg"
+      />
       <p>
         Ваш браузер не поддерживает HTML5 аудио. Вот взамен
         <a href="myAudio.mp4">ссылка на аудио</a>
